Fix footer link for Privacy Policy

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <p>
         &copy; 2025 Michilatte —
         
-        <h3 href="politica-privacidad.html">Política de Privacidad</h3>
+        <h3><a href="politica-privacidad.html">Política de Privacidad</a></h3>
     </p>
 </footer>
 
