Change footer link to a heading format

--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -87,7 +87,7 @@
     <hr>
     <p>
         &copy; 2025 Michilatte —
-        <a href="index.html">Volver al inicio</a>
+       <h3> <a href="index.html">Volver al inicio</a> </h3>
     </p>
 </footer>
 
