--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -17,8 +17,8 @@
 
     <h2>1. Responsable del tratamiento</h2>
     <p>
-        Responsable: Proyecto Michilatte<br>
-        Correo electrónico: contacto@michilatte.local<br>
+        Responsable: Proyecto mishilatte<br>
+        Correo electrónico: contacto@mishilatte.local<br>
         Finalidad del sitio web: Proyecto educativo
     </p>
 
@@ -64,7 +64,7 @@
 
     <p>
         Para ejercer estos derechos puede contactar en:
-        <strong>contacto@michilatte.local</strong>
+        <strong>contacto@mishilatte.local</strong>
     </p>
 
     <h2>8. Seguridad</h2>
