--- a/gatos.html
+++ b/gatos.html
@@ -39,8 +39,11 @@
 
             <article class="cat-card">
                 <div class="cat-photo"><img src="https://placekitten.com/400/280"></div>
-                <div class="cat-name">Moka</div>
-                <div class="cat-meta">2 años · Calmita</div>
+                <div class="cat-name">Emma</div>
+                <div class="cat-meta">(también la llamamos Bulgarita) apareció en un muelle de carga y descarga. Un tripulante de un barco la abandonó en el muelle, embarazadísima.
+Con el shock perdió a los bebés y tuvimos que operarla de urgencias.
+Es una gata IMPRESIONANTE. Muy cariñosa, sociable, juguetona, buena. No tenemos adjetivos que puedan describirla. Simplemente tienes que conocerla.
+Nombre Emma Clase Gato Desde 21-3-2023 Sexo Hembra  Edad 6 años y 5 meses  fecha de nacimiento 6/2019 Raza Europeo  Tamaño Mediano  Localidad Huelva  (Huelva)</div>
                 <div class="cat-tags">
                     <span>Convive con gatos</span>
                 </div>
@@ -49,16 +52,18 @@
 
             <article class="cat-card">
                 <div class="cat-photo"><img src="https://placekitten.com/401/280"></div>
-                <div class="cat-name">Latte</div>
-                <div class="cat-meta">1 año · Juguetón</div>
+                <div class="cat-name">Charlotte</div>
+                <div class="cat-meta">y su hermanita Nina son las dos pequeñas que quedan por encontrar adopciones. Son dos gatinas adorables, cariñosas y juguetonas. Ya se encuentran listas para encontrar un hogar definitivo, tanto juntas como por separado.
+Nombre Charlotte Clase Gato Desde 19-7-2023 Sexo Hembra  Edad 2 años y 5 meses  fecha de nacimiento 6/2023 Raza Europeo  Tamaño Pequeño  Localidad Huelva  (Huelva)</div>
                 <div class="cat-tags"><span>Vacunado</span></div>
                 <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">Quiero adoptar a Latte</button>
             </article>
 
             <article class="cat-card">
                 <div class="cat-photo"><img src="https://placekitten.com/402/280"></div>
-                <div class="cat-name">Nube</div>
-                <div class="cat-meta">3 años · Cariñosa</div>
+                <div class="cat-name">Nina</div>
+                <div class="cat-meta"> y su hermanita Charlotte son las dos pequeñas que quedan por encontrar adopciones. Son dos gatinas adorables, cariñosas y juguetonas. Ya se encuentran listas para encontrar un hogar definitivo, tanto juntas como por separado.
+Nombre Nina Clase Gato Desde 19-7-2023 Sexo Hembra  Edad 2 años y 5 meses  fecha de nacimiento 6/2023 Raza Europeo  Tamaño Pequeño  Localidad Huelva  (Huelva)</div>
                 <div class="cat-tags"><span>Apta con niños</span></div>
                 <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">Quiero adoptar a Nube</button>
             </article>
