--- a/gatos.html
+++ b/gatos.html
@@ -38,7 +38,7 @@
         <div class="cats-grid">
 
             <article class="cat-card">
-                <div class="cat-photo"><img src="https://placekitten.com/400/280"></div>
+                <div class="cat-photo"><img src="https://github.com/TAYllefert10/mishilatte/blob/main/gatos/emma.jpeg"></div>
                 <div class="cat-name">Emma</div>
                 <div class="cat-meta">(también la llamamos Bulgarita) apareció en un muelle de carga y descarga. Un tripulante de un barco la abandonó en el muelle, embarazadísima.
 Con el shock perdió a los bebés y tuvimos que operarla de urgencias.
@@ -51,7 +51,7 @@ Nombre Emma Clase Gato Desde 21-3-2023 Sexo Hembra  Edad 6 años y 5 meses  fech
             </article>
 
             <article class="cat-card">
-                <div class="cat-photo"><img src="https://placekitten.com/401/280"></div>
+                <div class="cat-photo"><img src="https://github.com/TAYllefert10/mishilatte/blob/main/gatos/charlotte.jpeg"></div>
                 <div class="cat-name">Charlotte</div>
                 <div class="cat-meta">y su hermanita Nina son las dos pequeñas que quedan por encontrar adopciones. Son dos gatinas adorables, cariñosas y juguetonas. Ya se encuentran listas para encontrar un hogar definitivo, tanto juntas como por separado.
 Nombre Charlotte Clase Gato Desde 19-7-2023 Sexo Hembra  Edad 2 años y 5 meses  fecha de nacimiento 6/2023 Raza Europeo  Tamaño Pequeño  Localidad Huelva  (Huelva)</div>
@@ -60,7 +60,7 @@ Nombre Charlotte Clase Gato Desde 19-7-2023 Sexo Hembra  Edad 2 años y 5 meses 
             </article>
 
             <article class="cat-card">
-                <div class="cat-photo"><img src="https://placekitten.com/402/280"></div>
+                <div class="cat-photo"><img src="https://github.com/TAYllefert10/mishilatte/blob/main/gatos/nina.jpeg"></div>
                 <div class="cat-name">Nina</div>
                 <div class="cat-meta"> y su hermanita Charlotte son las dos pequeñas que quedan por encontrar adopciones. Son dos gatinas adorables, cariñosas y juguetonas. Ya se encuentran listas para encontrar un hogar definitivo, tanto juntas como por separado.
 Nombre Nina Clase Gato Desde 19-7-2023 Sexo Hembra  Edad 2 años y 5 meses  fecha de nacimiento 6/2023 Raza Europeo  Tamaño Pequeño  Localidad Huelva  (Huelva)</div>
