Refactor cat descriptions and update image links

--- a/gatos.html
+++ b/gatos.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
- 
+
 <header>
     <div class="nav">
-        <div class="logo"><div class="logo-mark">🐾</div><span>Mishilatte</span></div>
+        <div class="logo">
+            <div class="logo-mark">🐾</div>
+            <span>Mishilatte</span>
+        </div>
 
         <nav class="nav-links">
             <a href="index.html">Inicio</a>
@@ -37,45 +40,95 @@
 
         <div class="cats-grid">
 
+            <!-- GATO 1 -->
             <article class="cat-card">
-                <div class="cat-photo"><img src="https://github.com/TAYllefert10/mishilatte/blob/main/gatos/emma.jpeg"></div>
+                <div class="cat-photo">
+                    <img src="https://raw.githubusercontent.com/TAYllefert10/mishilatte/main/gatos/emma.jpeg" alt="Emma">
+                </div>
                 <div class="cat-name">Emma</div>
-                <div class="cat-meta">(también la llamamos Bulgarita) apareció en un muelle de carga y descarga. Un tripulante de un barco la abandonó en el muelle, embarazadísima.
-Con el shock perdió a los bebés y tuvimos que operarla de urgencias.
-Es una gata IMPRESIONANTE. Muy cariñosa, sociable, juguetona, buena. No tenemos adjetivos que puedan describirla. Simplemente tienes que conocerla.
-Nombre Emma Clase Gato Desde 21-3-2023 Sexo Hembra  Edad 6 años y 5 meses  fecha de nacimiento 6/2019 Raza Europeo  Tamaño Mediano  Localidad Huelva  (Huelva)</div>
+                <div class="cat-meta">
+                    (también la llamamos Bulgarita) apareció en un muelle de carga y descarga.
+                    Un tripulante de un barco la abandonó embarazada.
+                    Tras una operación de urgencia, se recuperó y ahora es una gata
+                    muy cariñosa, sociable y juguetona.<br><br>
+
+                    Sexo: Hembra<br>
+                    Edad: 6 años y 5 meses<br>
+                    Fecha de nacimiento: 06/2019<br>
+                    Raza: Europeo<br>
+                    Tamaño: Mediano<br>
+                    Localidad: Huelva
+                </div>
                 <div class="cat-tags">
                     <span>Convive con gatos</span>
                 </div>
-                <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">Quiero adoptar a Moka</button>
+                <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">
+                    Quiero adoptar a Emma
+                </button>
             </article>
 
+            <!-- GATO 2 -->
             <article class="cat-card">
-                <div class="cat-photo"><img src="https://github.com/TAYllefert10/mishilatte/blob/main/gatos/charlotte.jpeg"></div>
+                <div class="cat-photo">
+                    <img src="https://raw.githubusercontent.com/TAYllefert10/mishilatte/main/gatos/charlotte.jpeg" alt="Charlotte">
+                </div>
                 <div class="cat-name">Charlotte</div>
-                <div class="cat-meta">y su hermanita Nina son las dos pequeñas que quedan por encontrar adopciones. Son dos gatinas adorables, cariñosas y juguetonas. Ya se encuentran listas para encontrar un hogar definitivo, tanto juntas como por separado.
-Nombre Charlotte Clase Gato Desde 19-7-2023 Sexo Hembra  Edad 2 años y 5 meses  fecha de nacimiento 6/2023 Raza Europeo  Tamaño Pequeño  Localidad Huelva  (Huelva)</div>
-                <div class="cat-tags"><span>Vacunado</span></div>
-                <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">Quiero adoptar a Latte</button>
+                <div class="cat-meta">
+                    Charlotte y su hermanita Nina son dos gatinas adorables,
+                    cariñosas y juguetonas, listas para encontrar un hogar definitivo.<br><br>
+
+                    Sexo: Hembra<br>
+                    Edad: 2 años y 5 meses<br>
+                    Fecha de nacimiento: 06/2023<br>
+                    Raza: Europeo<br>
+                    Tamaño: Pequeño<br>
+                    Localidad: Huelva
+                </div>
+                <div class="cat-tags">
+                    <span>Vacunada</span>
+                </div>
+                <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">
+                    Quiero adoptar a Charlotte
+                </button>
             </article>
 
+            <!-- GATO 3 -->
             <article class="cat-card">
-                <div class="cat-photo"><img src="https://github.com/TAYllefert10/mishilatte/blob/main/gatos/nina.jpeg"></div>
+                <div class="cat-photo">
+                    <img src="https://raw.githubusercontent.com/TAYllefert10/mishilatte/main/gatos/nina.jpeg" alt="Nina">
+                </div>
                 <div class="cat-name">Nina</div>
-                <div class="cat-meta"> y su hermanita Charlotte son las dos pequeñas que quedan por encontrar adopciones. Son dos gatinas adorables, cariñosas y juguetonas. Ya se encuentran listas para encontrar un hogar definitivo, tanto juntas como por separado.
-Nombre Nina Clase Gato Desde 19-7-2023 Sexo Hembra  Edad 2 años y 5 meses  fecha de nacimiento 6/2023 Raza Europeo  Tamaño Pequeño  Localidad Huelva  (Huelva)</div>
-                <div class="cat-tags"><span>Apta con niños</span></div>
-                <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">Quiero adoptar a Nube</button>
+                <div class="cat-meta">
+                    Nina es la hermanita de Charlotte.
+                    Es una gatina muy dulce, juguetona y sociable,
+                    perfecta para familias.<br><br>
+
+                    Sexo: Hembra<br>
+                    Edad: 2 años y 5 meses<br>
+                    Fecha de nacimiento: 06/2023<br>
+                    Raza: Europeo<br>
+                    Tamaño: Pequeño<br>
+                    Localidad: Huelva
+                </div>
+                <div class="cat-tags">
+                    <span>Apta con niños</span>
+                </div>
+                <button class="btn btn-primary btn-cat" onclick="location.href='donaciones.html'">
+                    Quiero adoptar a Nina
+                </button>
             </article>
 
         </div>
-
     </section>
 </main>
 
 <footer>
     <div class="footer-inner">
-        <span>© Mishilatte</span><span>Maqueta educativa.</span>
+        <span>© Mishilatte</span>
+        <span>Maqueta educativa.</span>
+        <span>
+            <a href="politica-privacidad.html">Política de Privacidad</a>
+        </span>
     </div>
 </footer>
 
