--- a/carta.html
+++ b/carta.html
@@ -186,9 +186,12 @@
 </main>
 
 <footer>
-    <div class="footer-inner">
-        © Mishilatte · Cat café & adopciones responsables.
-    </div>
+    <hr>
+    <p>
+        &copy; 2025 Michilatte —
+        
+        <h3><a href="politica-privacidad.html">Política de Privacidad</a></h3>
+    </p>
 </footer>
 
 </body>
