--- a/gatos.html
+++ b/gatos.html
@@ -123,13 +123,12 @@
 </main>
 
 <footer>
-    <div class="footer-inner">
-        <span>© Mishilatte</span>
-        <span>Maqueta educativa.</span>
-        <span>
-            <a href="politica-privacidad.html">Política de Privacidad</a>
-        </span>
-    </div>
+    <hr>
+    <p>
+        &copy; 2025 Michilatte —
+        
+        <h3><a href="politica-privacidad.html">Política de Privacidad</a></h3>
+    </p>
 </footer>
 
 </body>
